# context-trio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTEXT.json  DECISIONS.md  PRD.md
src/trio/: __init__.py  __main__.py  agents.py  cli.py  config.py  context.py  exceptions.py  orchestrator.py  prompts.py  schemas.py  state_machine.py
