[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-trio"
version = "0.1.0"
description = "Triad Orchestration System — 3-agent AI collaboration framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
trio = "trio.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.black]
target-version = ["py312"]
